--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -30,7 +30,8 @@
   right: 0;
   left: 0;
   z-index: 10;
-  height: calc(100vh - 6.5em);
+  height: calc(100vh - 105px);
+  min-height: 400px;
   max-height: 861px;
   display: flex;
   flex-direction: column;
@@ -63,8 +64,10 @@
 
 @media only screen and (max-width: 380px) {
   .logo {
-    margin-left: 2rem;
-    width: 3em;
-    height: 3em;
+    display: none;
+  }
+  .menu a {
+    padding: 1em 0;
+
   }
 }
